@@ -79,8 +79,8 @@ elseif (isset($_REQUEST['iconid'])) {
 
 	if ($iconid > 0) {
 		$image = get_image_by_imageid($iconid);
-		$image = $image['image'];
-		$source = imageFromString($image);
+
+		$source = $image['image'] ? imageFromString($image['image']) : get_default_image();
 	}
 	else {
 		$source = get_default_image();
@@ -89,6 +89,7 @@ elseif (isset($_REQUEST['iconid'])) {
 	if ($resize) {
 		$source = imageThumb($source, $width, $height);
 	}
+
 	imageOut($source);
 }
 elseif (isset($_REQUEST['imageid'])) {
